solve the 10px overflow problem

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-
+html{
+    overflow: hidden;
+}
 
 #map {
     height: 100vh;
